fix : 브랜드 API 변경 프론트엔드 반영
